Fix text size for Safari on iPhone

--- a/styles/style.css
+++ b/styles/style.css
@@ -33,6 +33,8 @@
 
 html {
   background: #9BA2B0;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
 }
 
 a, a:visited {
